--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
                     <p>Architected a multi-modal smart home system featuring a Google Gemini powered conversational agent for advanced, natural language control and task automation.</p>
                 </div>
                 <div class="project-item">
-                    <h3>AI-Powered Slow-Motion Video Synthesis (RIFE)</h3>
-                    <p>Developed a high-fidelity video processing tool in Python that intelligently generates intermediate frames to convert standard videos (30fps) into smooth slow-motion (60/120fps).</p>
+                    <h3>ESP32 based IoT Medicine Dispenser</h3>
+                    <p>Developed an IoT-enabled medicine dispenser built with ESP32 to manage and dispense medication with scheduling and tracking.</p>
                 </div>
                 <div class="project-item">
                     <h3>Real-Time Anti-Sleep System for Driver Safety</h3>
@@ -428,9 +428,9 @@
                 </div>
                 <ul class="cert-list">
                     <li>Prompt Design in Vertex AI - Google</li>
-                    <li>DeepLearning.AI TensorFlow Developer Professional Certificate</li>
-                    <li>GenAI Powered Data Analytics (Tata) - Forage</li>
-                    <li>Data Fundamentals - IBM Skillbuild</li>
+                    <li>Introducton to Solid Edge - Siemens</li>
+                    <li>GenAI Powered Data Analytics (Tata) - Forage (Expected July 2025) </li>
+                    <li>Getting Started with AI on Jetson Nano - Nvidia</li>
                     <li>Intro to IoT – NPTEL</li>
                 </ul>
             </section>
